-------------------------------------------------
GearSwap 0.890 - Added support for enchanted items in Wardrobe. Added a filter for enchanted items/armors. Made resources tables static.
-------------------------------------------------
GearSwap 0.880 - Accommodated booleans and numbers in equip commands. Fixed world.conquest.strengths.
-------------------------------------------------
GearSwap 0.875 - Changed command_registry handling slightly
-------------------------------------------------
GearSwap 0.874 - Added indi_change event
-------------------------------------------------
GearSwap 0.873 - Adjusted midaction and pet_midaction.
-------------------------------------------------
GearSwap 0.872 - Fixed Encumbrance, Job Change issues, and a nil error on login.
-------------------------------------------------
GearSwap 0.871 - Debugging and Logging changes.
-------------------------------------------------
GearSwap 0.870 - Rewrite of "order" as "priority" for advanced tables.
-------------------------------------------------
GearSwap 0.868 - Ironed out some bugs. Added .in_mog_house. Made pet_change work for gaining charmed pets.
-------------------------------------------------
GearSwap 0.865 - Replicated part of the LuaCore API in GearSwap and set limits on global variable refresh rates.
-------------------------------------------------
GearSwap 0.860 - Reworked the augment system to use the extdata library. Consequently enabled evolith support.
-------------------------------------------------
GearSwap 0.851 - Added Load command and file path support for a libs folder.
-------------------------------------------------
GearSwap 0.850 - Japanese support.
-------------------------------------------------
GearSwap 0.840 - Overhaul for Wardrobe. Preparations for new augment library.
-------------------------------------------------
GearSwap 0.837 - Created infrastructure for GearSwap served information and added Indi spell aura information to player.